k8s/parking-db-query-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: parking-db-query-ss
spec:
  serviceName: parking-db-query-service
  replicas: 1
  selector:
    matchLabels:
      app: parking-db-query
  template:
    metadata:
      labels:
        app: parking-db-query
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6
        ports:
        - containerPort: 3306
        readinessProbe:
          exec:
            command: ["mariadb-admin", "ping", "-h", "localhost", "-p$(MARIADB_ROOT_PASSWORD)"]
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          exec:
            command: ["mariadb-admin", "ping", "-h", "localhost", "-p$(MARIADB_ROOT_PASSWORD)"]
          initialDelaySeconds: 40
          periodSeconds: 20
        volumeMounts:
        - name: parking-db-pvc
          mountPath: /var/lib/mysql
        - name: init-sql-volume
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql
      volumes:
      - name: init-sql-volume
        configMap:
          name: parking-db-query-config
  volumeClaimTemplates:
  - metadata: { name: parking-db-pvc }
    spec:
      accessModes: ["ReadWriteOnce"]
      resources: { requests: { storage: 5Gi } }
      storageClassName: manual
      selector: { matchLabels: { type: query } }
