k8s/parking-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parking-backend-service
spec:
  type: ClusterIP
  selector:
    app: parking-backend
    color: blue     # blue <-> green
  ports:
    - port: 80
      targetPort: 8080
