k8s/parking-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: parking-db-ss
spec:
  serviceName: parking-db-service
  replicas: 1
  selector:
    matchLabels:
      app: parking-db
  template:
    metadata:
      labels:
        app: parking-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6
        ports:
        - containerPort: 3306
        readinessProbe:
          exec:
            command:
            - mariadb-admin
            - ping
            - "-h", "localhost"
            - "-p$(MARIADB_ROOT_PASSWORD)"
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        livenessProbe:
          exec:
            command:
            - mariadb-admin
            - ping
            - "-h", "localhost"
            - "-p$(MARIADB_ROOT_PASSWORD)"
          initialDelaySeconds: 40
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3

        # PVC (Persistent Volume Claim)
        volumeMounts:
        # DB 데이터용 PVC
        - name: parking-db-pvc
          mountPath: /var/lib/mysql
        # 초기 SQL용 Configmap
        - name: parking-db-configmap-volume
          mountPath: /docker-entrypoint-initdb.d

      # Configmap
      volumes:
      - name: parking-db-configmap-volume
        configMap:
          name: parking-db-configmap

  # PVC        
  volumeClaimTemplates:
  - metadata:
    name: parking-db-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: manual

---
# MariaDB 서비스
apiVersion: v1
kind: Service
metadata:
  name: parking-db-service
spec:
  type: ClusterIP
  selector:
    app: parking-db
  ports:
    - port: 3306         # DB용 포트
      targetPort: 3306
