k8s/parking-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parking-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: parking-frontend
  template:
    metadata:
      labels:
        app: parking-frontend
    spec:
      containers:
      - name: parking-frontend
        image: hyungdongjo/parking-frontend:latest
        ports:
        - containerPort: 80
        # 1. Readiness Probe
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        # 2. Liveness Probe
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: parking-frontend-service
spec:
  type: ClusterIP
  selector:
    app: parking-frontend
  ports:
    - port: 80
      targetPort: 80
