k8s/parking-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parking-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://parking-frontend.local"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

spec:
  rules:
  - host: parking-backend.local
    #본인 도메인  => 웹을 사용할 pc에서 현재 접속중인 가상머신 ip -> 10.0.2.101 도메인명 설정 필요 (sudo nano /etc/hosts)
    #curl http://parking-backend.local 또는 curl http://parking-backend-local:(인그레스컨트롤러 포트) 로 확인 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parking-backend-service
            port:
              number: 80
