k8s/parking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parking-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: parking-backend-service
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: parking-frontend-service
            port:
              number: 80
